// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Board component Test rendering Renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Board
    addCardToTable={[Function]}
    cards={
        Array [
            Array [
              Object {
                "alt": 1,
                "code": 1,
                "key": 1,
                "playerId": 0,
                "src": "img",
                "value": 1,
              },
            ],
            Array [
              Object {
                "alt": 2,
                "code": 2,
                "key": 2,
                "playerId": 1,
                "src": "img",
                "value": 2,
              },
            ],
            Array [
              Object {
                "alt": 3,
                "code": 3,
                "key": 3,
                "playerId": 2,
                "src": "img",
                "value": 3,
              },
            ],
          ]
    }
    flushTable={[Function]}
    numPlayers={3}
    score={
        Array [
            0,
            0,
            0,
          ]
    }
    setEndStatus={[Function]}
    setRoundWinner={[Function]}
    table={
        Array [
            Object {},
            Object {},
          ]
    }
    unblockClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row-container shrink"
>
          <p
                    className="player-info"
          >
                    Player 2
          </p>
          <p
                    className="player-info"
          >
                    Score: 0
          </p>
          <div
                    className="top-row"
          >
                    <Connect(Card)
                              alt={3}
                              animationFinished={[Function]}
                              center={
                                        Object {
                                                  "centerX": 0,
                                                  "centerY": 0,
                                                }
                              }
                              code={3}
                              playRounds={undefined}
                              playerId={2}
                              removeCard={[Function]}
                              src={undefined}
                              value={3}
                    />
          </div>
</div>,
        <div
          className="middle-row"
>
          <div
                    className="row-container shrink"
          >
                    <p
                              className="player-info"
                    >
                              Player 1
                    </p>
                    <p
                              className="player-info"
                    >
                              Score: 0
                    </p>
                    <div
                              className="player-left"
                    >
                              <Connect(Card)
                                        alt={2}
                                        animationFinished={[Function]}
                                        center={
                                                  Object {
                                                            "centerX": 0,
                                                            "centerY": 0,
                                                          }
                                        }
                                        code={2}
                                        playRounds={undefined}
                                        playerId={1}
                                        removeCard={[Function]}
                                        src={undefined}
                                        value={2}
                              />
                    </div>
          </div>
          <div
                    className="player table"
          />
</div>,
        <div
          className="row-container"
>
          <p
                    className="player-info me"
          >
                    Me
          </p>
          <p
                    className="player-info"
          >
                    Score: 0
          </p>
          <div
                    className="bottom-row"
          >
                    <Connect(Card)
                              alt={1}
                              animationFinished={[Function]}
                              center={
                                        Object {
                                                  "centerX": 0,
                                                  "centerY": 0,
                                                }
                              }
                              code={1}
                              playRounds={undefined}
                              playerId={0}
                              removeCard={[Function]}
                              src={undefined}
                              value={1}
                    />
          </div>
</div>,
      ],
      "className": "wrapper",
    },
    "ref": Object {
      "current": null,
    },
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="player-info"
>
              Player 2
</p>,
            <p
              className="player-info"
>
              Score: 0
</p>,
            <div
              className="top-row"
>
              <Connect(Card)
                            alt={3}
                            animationFinished={[Function]}
                            center={
                                          Object {
                                                        "centerX": 0,
                                                        "centerY": 0,
                                                      }
                            }
                            code={3}
                            playRounds={undefined}
                            playerId={2}
                            removeCard={[Function]}
                            src={undefined}
                            value={3}
              />
</div>,
          ],
          "className": "row-container shrink",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Player 2",
              "className": "player-info",
            },
            "ref": null,
            "rendered": "Player 2",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Score: 0",
              "className": "player-info",
            },
            "ref": null,
            "rendered": "Score: 0",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Connect(Card)
                  alt={3}
                  animationFinished={[Function]}
                  center={
                                    Object {
                                                      "centerX": 0,
                                                      "centerY": 0,
                                                    }
                  }
                  code={3}
                  playRounds={undefined}
                  playerId={2}
                  removeCard={[Function]}
                  src={undefined}
                  value={3}
/>,
              ],
              "className": "top-row",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "3",
                "nodeType": "class",
                "props": Object {
                  "alt": 3,
                  "animationFinished": [Function],
                  "center": Object {
                    "centerX": 0,
                    "centerY": 0,
                  },
                  "code": 3,
                  "playRounds": undefined,
                  "playerId": 2,
                  "removeCard": [Function],
                  "src": undefined,
                  "value": 3,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="row-container shrink"
>
              <p
                            className="player-info"
              >
                            Player 1
              </p>
              <p
                            className="player-info"
              >
                            Score: 0
              </p>
              <div
                            className="player-left"
              >
                            <Connect(Card)
                                          alt={2}
                                          animationFinished={[Function]}
                                          center={
                                                        Object {
                                                                      "centerX": 0,
                                                                      "centerY": 0,
                                                                    }
                                          }
                                          code={2}
                                          playRounds={undefined}
                                          playerId={1}
                                          removeCard={[Function]}
                                          src={undefined}
                                          value={2}
                            />
              </div>
</div>,
            <div
              className="player table"
/>,
            undefined,
          ],
          "className": "middle-row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="player-info"
>
                  Player 1
</p>,
                <p
                  className="player-info"
>
                  Score: 0
</p>,
                <div
                  className="player-left"
>
                  <Connect(Card)
                                    alt={2}
                                    animationFinished={[Function]}
                                    center={
                                                      Object {
                                                                        "centerX": 0,
                                                                        "centerY": 0,
                                                                      }
                                    }
                                    code={2}
                                    playRounds={undefined}
                                    playerId={1}
                                    removeCard={[Function]}
                                    src={undefined}
                                    value={2}
                  />
</div>,
              ],
              "className": "row-container shrink",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Player 1",
                  "className": "player-info",
                },
                "ref": null,
                "rendered": "Player 1",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Score: 0",
                  "className": "player-info",
                },
                "ref": null,
                "rendered": "Score: 0",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Connect(Card)
                      alt={2}
                      animationFinished={[Function]}
                      center={
                                            Object {
                                                                  "centerX": 0,
                                                                  "centerY": 0,
                                                                }
                      }
                      code={2}
                      playRounds={undefined}
                      playerId={1}
                      removeCard={[Function]}
                      src={undefined}
                      value={2}
/>,
                  ],
                  "className": "player-left",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "2",
                    "nodeType": "class",
                    "props": Object {
                      "alt": 2,
                      "animationFinished": [Function],
                      "center": Object {
                        "centerX": 0,
                        "centerY": 0,
                      },
                      "code": 2,
                      "playRounds": undefined,
                      "playerId": 1,
                      "removeCard": [Function],
                      "src": undefined,
                      "value": 2,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "player table",
            },
            "ref": Object {
              "current": null,
            },
            "rendered": null,
            "type": "div",
          },
          undefined,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="player-info me"
>
              Me
</p>,
            <p
              className="player-info"
>
              Score: 0
</p>,
            <div
              className="bottom-row"
>
              <Connect(Card)
                            alt={1}
                            animationFinished={[Function]}
                            center={
                                          Object {
                                                        "centerX": 0,
                                                        "centerY": 0,
                                                      }
                            }
                            code={1}
                            playRounds={undefined}
                            playerId={0}
                            removeCard={[Function]}
                            src={undefined}
                            value={1}
              />
</div>,
          ],
          "className": "row-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Me",
              "className": "player-info me",
            },
            "ref": null,
            "rendered": "Me",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Score: 0",
              "className": "player-info",
            },
            "ref": null,
            "rendered": "Score: 0",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Connect(Card)
                  alt={1}
                  animationFinished={[Function]}
                  center={
                                    Object {
                                                      "centerX": 0,
                                                      "centerY": 0,
                                                    }
                  }
                  code={1}
                  playRounds={undefined}
                  playerId={0}
                  removeCard={[Function]}
                  src={undefined}
                  value={1}
/>,
              ],
              "className": "bottom-row",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "class",
                "props": Object {
                  "alt": 1,
                  "animationFinished": [Function],
                  "center": Object {
                    "centerX": 0,
                    "centerY": 0,
                  },
                  "code": 1,
                  "playRounds": undefined,
                  "playerId": 0,
                  "removeCard": [Function],
                  "src": undefined,
                  "value": 1,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row-container shrink"
>
            <p
                        className="player-info"
            >
                        Player 2
            </p>
            <p
                        className="player-info"
            >
                        Score: 0
            </p>
            <div
                        className="top-row"
            >
                        <Connect(Card)
                                    alt={3}
                                    animationFinished={[Function]}
                                    center={
                                                Object {
                                                            "centerX": 0,
                                                            "centerY": 0,
                                                          }
                                    }
                                    code={3}
                                    playRounds={undefined}
                                    playerId={2}
                                    removeCard={[Function]}
                                    src={undefined}
                                    value={3}
                        />
            </div>
</div>,
          <div
            className="middle-row"
>
            <div
                        className="row-container shrink"
            >
                        <p
                                    className="player-info"
                        >
                                    Player 1
                        </p>
                        <p
                                    className="player-info"
                        >
                                    Score: 0
                        </p>
                        <div
                                    className="player-left"
                        >
                                    <Connect(Card)
                                                alt={2}
                                                animationFinished={[Function]}
                                                center={
                                                            Object {
                                                                        "centerX": 0,
                                                                        "centerY": 0,
                                                                      }
                                                }
                                                code={2}
                                                playRounds={undefined}
                                                playerId={1}
                                                removeCard={[Function]}
                                                src={undefined}
                                                value={2}
                                    />
                        </div>
            </div>
            <div
                        className="player table"
            />
</div>,
          <div
            className="row-container"
>
            <p
                        className="player-info me"
            >
                        Me
            </p>
            <p
                        className="player-info"
            >
                        Score: 0
            </p>
            <div
                        className="bottom-row"
            >
                        <Connect(Card)
                                    alt={1}
                                    animationFinished={[Function]}
                                    center={
                                                Object {
                                                            "centerX": 0,
                                                            "centerY": 0,
                                                          }
                                    }
                                    code={1}
                                    playRounds={undefined}
                                    playerId={0}
                                    removeCard={[Function]}
                                    src={undefined}
                                    value={1}
                        />
            </div>
</div>,
        ],
        "className": "wrapper",
      },
      "ref": Object {
        "current": null,
      },
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="player-info"
>
                Player 2
</p>,
              <p
                className="player-info"
>
                Score: 0
</p>,
              <div
                className="top-row"
>
                <Connect(Card)
                                alt={3}
                                animationFinished={[Function]}
                                center={
                                                Object {
                                                                "centerX": 0,
                                                                "centerY": 0,
                                                              }
                                }
                                code={3}
                                playRounds={undefined}
                                playerId={2}
                                removeCard={[Function]}
                                src={undefined}
                                value={3}
                />
</div>,
            ],
            "className": "row-container shrink",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Player 2",
                "className": "player-info",
              },
              "ref": null,
              "rendered": "Player 2",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Score: 0",
                "className": "player-info",
              },
              "ref": null,
              "rendered": "Score: 0",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Connect(Card)
                    alt={3}
                    animationFinished={[Function]}
                    center={
                                        Object {
                                                            "centerX": 0,
                                                            "centerY": 0,
                                                          }
                    }
                    code={3}
                    playRounds={undefined}
                    playerId={2}
                    removeCard={[Function]}
                    src={undefined}
                    value={3}
/>,
                ],
                "className": "top-row",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "3",
                  "nodeType": "class",
                  "props": Object {
                    "alt": 3,
                    "animationFinished": [Function],
                    "center": Object {
                      "centerX": 0,
                      "centerY": 0,
                    },
                    "code": 3,
                    "playRounds": undefined,
                    "playerId": 2,
                    "removeCard": [Function],
                    "src": undefined,
                    "value": 3,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="row-container shrink"
>
                <p
                                className="player-info"
                >
                                Player 1
                </p>
                <p
                                className="player-info"
                >
                                Score: 0
                </p>
                <div
                                className="player-left"
                >
                                <Connect(Card)
                                                alt={2}
                                                animationFinished={[Function]}
                                                center={
                                                                Object {
                                                                                "centerX": 0,
                                                                                "centerY": 0,
                                                                              }
                                                }
                                                code={2}
                                                playRounds={undefined}
                                                playerId={1}
                                                removeCard={[Function]}
                                                src={undefined}
                                                value={2}
                                />
                </div>
</div>,
              <div
                className="player table"
/>,
              undefined,
            ],
            "className": "middle-row",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="player-info"
>
                    Player 1
</p>,
                  <p
                    className="player-info"
>
                    Score: 0
</p>,
                  <div
                    className="player-left"
>
                    <Connect(Card)
                                        alt={2}
                                        animationFinished={[Function]}
                                        center={
                                                            Object {
                                                                                "centerX": 0,
                                                                                "centerY": 0,
                                                                              }
                                        }
                                        code={2}
                                        playRounds={undefined}
                                        playerId={1}
                                        removeCard={[Function]}
                                        src={undefined}
                                        value={2}
                    />
</div>,
                ],
                "className": "row-container shrink",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Player 1",
                    "className": "player-info",
                  },
                  "ref": null,
                  "rendered": "Player 1",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Score: 0",
                    "className": "player-info",
                  },
                  "ref": null,
                  "rendered": "Score: 0",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <Connect(Card)
                        alt={2}
                        animationFinished={[Function]}
                        center={
                                                Object {
                                                                        "centerX": 0,
                                                                        "centerY": 0,
                                                                      }
                        }
                        code={2}
                        playRounds={undefined}
                        playerId={1}
                        removeCard={[Function]}
                        src={undefined}
                        value={2}
/>,
                    ],
                    "className": "player-left",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": "2",
                      "nodeType": "class",
                      "props": Object {
                        "alt": 2,
                        "animationFinished": [Function],
                        "center": Object {
                          "centerX": 0,
                          "centerY": 0,
                        },
                        "code": 2,
                        "playRounds": undefined,
                        "playerId": 1,
                        "removeCard": [Function],
                        "src": undefined,
                        "value": 2,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "player table",
              },
              "ref": Object {
                "current": null,
              },
              "rendered": null,
              "type": "div",
            },
            undefined,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="player-info me"
>
                Me
</p>,
              <p
                className="player-info"
>
                Score: 0
</p>,
              <div
                className="bottom-row"
>
                <Connect(Card)
                                alt={1}
                                animationFinished={[Function]}
                                center={
                                                Object {
                                                                "centerX": 0,
                                                                "centerY": 0,
                                                              }
                                }
                                code={1}
                                playRounds={undefined}
                                playerId={0}
                                removeCard={[Function]}
                                src={undefined}
                                value={1}
                />
</div>,
            ],
            "className": "row-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Me",
                "className": "player-info me",
              },
              "ref": null,
              "rendered": "Me",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Score: 0",
                "className": "player-info",
              },
              "ref": null,
              "rendered": "Score: 0",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Connect(Card)
                    alt={1}
                    animationFinished={[Function]}
                    center={
                                        Object {
                                                            "centerX": 0,
                                                            "centerY": 0,
                                                          }
                    }
                    code={1}
                    playRounds={undefined}
                    playerId={0}
                    removeCard={[Function]}
                    src={undefined}
                    value={1}
/>,
                ],
                "className": "bottom-row",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "class",
                  "props": Object {
                    "alt": 1,
                    "animationFinished": [Function],
                    "center": Object {
                      "centerX": 0,
                      "centerY": 0,
                    },
                    "code": 1,
                    "playRounds": undefined,
                    "playerId": 0,
                    "removeCard": [Function],
                    "src": undefined,
                    "value": 1,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Test Board component Test rendering Renders correctly all 4 players 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Board
    addCardToTable={[Function]}
    cards={
        Array [
            Array [
              Object {
                "alt": 1,
                "code": 1,
                "key": 1,
                "playerId": 0,
                "src": "img",
                "value": 1,
              },
            ],
            Array [
              Object {
                "alt": 2,
                "code": 2,
                "key": 2,
                "playerId": 1,
                "src": "img",
                "value": 2,
              },
            ],
            Array [
              Object {
                "alt": 3,
                "code": 3,
                "key": 3,
                "playerId": 2,
                "src": "img",
                "value": 3,
              },
            ],
          ]
    }
    flushTable={[Function]}
    numPlayers={4}
    score={
        Array [
            0,
            0,
            0,
            0,
          ]
    }
    setEndStatus={[Function]}
    setRoundWinner={[Function]}
    table={
        Array [
            Object {},
            Object {},
          ]
    }
    unblockClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="row-container shrink"
>
          <p
                    className="player-info"
          >
                    Player 2
          </p>
          <p
                    className="player-info"
          >
                    Score: 0
          </p>
          <div
                    className="top-row"
          >
                    <Connect(Card)
                              alt={3}
                              animationFinished={[Function]}
                              center={
                                        Object {
                                                  "centerX": 0,
                                                  "centerY": 0,
                                                }
                              }
                              code={3}
                              playRounds={undefined}
                              playerId={2}
                              removeCard={[Function]}
                              src={undefined}
                              value={3}
                    />
          </div>
</div>,
        <div
          className="middle-row"
>
          <div
                    className="row-container shrink"
          >
                    <p
                              className="player-info"
                    >
                              Player 1
                    </p>
                    <p
                              className="player-info"
                    >
                              Score: 0
                    </p>
                    <div
                              className="player-left"
                    >
                              <Connect(Card)
                                        alt={2}
                                        animationFinished={[Function]}
                                        center={
                                                  Object {
                                                            "centerX": 0,
                                                            "centerY": 0,
                                                          }
                                        }
                                        code={2}
                                        playRounds={undefined}
                                        playerId={1}
                                        removeCard={[Function]}
                                        src={undefined}
                                        value={2}
                              />
                    </div>
          </div>
          <div
                    className="player table"
          />
</div>,
        <div
          className="row-container"
>
          <p
                    className="player-info me"
          >
                    Me
          </p>
          <p
                    className="player-info"
          >
                    Score: 0
          </p>
          <div
                    className="bottom-row"
          >
                    <Connect(Card)
                              alt={1}
                              animationFinished={[Function]}
                              center={
                                        Object {
                                                  "centerX": 0,
                                                  "centerY": 0,
                                                }
                              }
                              code={1}
                              playRounds={undefined}
                              playerId={0}
                              removeCard={[Function]}
                              src={undefined}
                              value={1}
                    />
          </div>
</div>,
      ],
      "className": "wrapper",
    },
    "ref": Object {
      "current": null,
    },
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="player-info"
>
              Player 2
</p>,
            <p
              className="player-info"
>
              Score: 0
</p>,
            <div
              className="top-row"
>
              <Connect(Card)
                            alt={3}
                            animationFinished={[Function]}
                            center={
                                          Object {
                                                        "centerX": 0,
                                                        "centerY": 0,
                                                      }
                            }
                            code={3}
                            playRounds={undefined}
                            playerId={2}
                            removeCard={[Function]}
                            src={undefined}
                            value={3}
              />
</div>,
          ],
          "className": "row-container shrink",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Player 2",
              "className": "player-info",
            },
            "ref": null,
            "rendered": "Player 2",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Score: 0",
              "className": "player-info",
            },
            "ref": null,
            "rendered": "Score: 0",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Connect(Card)
                  alt={3}
                  animationFinished={[Function]}
                  center={
                                    Object {
                                                      "centerX": 0,
                                                      "centerY": 0,
                                                    }
                  }
                  code={3}
                  playRounds={undefined}
                  playerId={2}
                  removeCard={[Function]}
                  src={undefined}
                  value={3}
/>,
              ],
              "className": "top-row",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "3",
                "nodeType": "class",
                "props": Object {
                  "alt": 3,
                  "animationFinished": [Function],
                  "center": Object {
                    "centerX": 0,
                    "centerY": 0,
                  },
                  "code": 3,
                  "playRounds": undefined,
                  "playerId": 2,
                  "removeCard": [Function],
                  "src": undefined,
                  "value": 3,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="row-container shrink"
>
              <p
                            className="player-info"
              >
                            Player 1
              </p>
              <p
                            className="player-info"
              >
                            Score: 0
              </p>
              <div
                            className="player-left"
              >
                            <Connect(Card)
                                          alt={2}
                                          animationFinished={[Function]}
                                          center={
                                                        Object {
                                                                      "centerX": 0,
                                                                      "centerY": 0,
                                                                    }
                                          }
                                          code={2}
                                          playRounds={undefined}
                                          playerId={1}
                                          removeCard={[Function]}
                                          src={undefined}
                                          value={2}
                            />
              </div>
</div>,
            <div
              className="player table"
/>,
            undefined,
          ],
          "className": "middle-row",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="player-info"
>
                  Player 1
</p>,
                <p
                  className="player-info"
>
                  Score: 0
</p>,
                <div
                  className="player-left"
>
                  <Connect(Card)
                                    alt={2}
                                    animationFinished={[Function]}
                                    center={
                                                      Object {
                                                                        "centerX": 0,
                                                                        "centerY": 0,
                                                                      }
                                    }
                                    code={2}
                                    playRounds={undefined}
                                    playerId={1}
                                    removeCard={[Function]}
                                    src={undefined}
                                    value={2}
                  />
</div>,
              ],
              "className": "row-container shrink",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Player 1",
                  "className": "player-info",
                },
                "ref": null,
                "rendered": "Player 1",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Score: 0",
                  "className": "player-info",
                },
                "ref": null,
                "rendered": "Score: 0",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <Connect(Card)
                      alt={2}
                      animationFinished={[Function]}
                      center={
                                            Object {
                                                                  "centerX": 0,
                                                                  "centerY": 0,
                                                                }
                      }
                      code={2}
                      playRounds={undefined}
                      playerId={1}
                      removeCard={[Function]}
                      src={undefined}
                      value={2}
/>,
                  ],
                  "className": "player-left",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": "2",
                    "nodeType": "class",
                    "props": Object {
                      "alt": 2,
                      "animationFinished": [Function],
                      "center": Object {
                        "centerX": 0,
                        "centerY": 0,
                      },
                      "code": 2,
                      "playRounds": undefined,
                      "playerId": 1,
                      "removeCard": [Function],
                      "src": undefined,
                      "value": 2,
                    },
                    "ref": null,
                    "rendered": null,
                    "type": [Function],
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "player table",
            },
            "ref": Object {
              "current": null,
            },
            "rendered": null,
            "type": "div",
          },
          undefined,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p
              className="player-info me"
>
              Me
</p>,
            <p
              className="player-info"
>
              Score: 0
</p>,
            <div
              className="bottom-row"
>
              <Connect(Card)
                            alt={1}
                            animationFinished={[Function]}
                            center={
                                          Object {
                                                        "centerX": 0,
                                                        "centerY": 0,
                                                      }
                            }
                            code={1}
                            playRounds={undefined}
                            playerId={0}
                            removeCard={[Function]}
                            src={undefined}
                            value={1}
              />
</div>,
          ],
          "className": "row-container",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Me",
              "className": "player-info me",
            },
            "ref": null,
            "rendered": "Me",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Score: 0",
              "className": "player-info",
            },
            "ref": null,
            "rendered": "Score: 0",
            "type": "p",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Connect(Card)
                  alt={1}
                  animationFinished={[Function]}
                  center={
                                    Object {
                                                      "centerX": 0,
                                                      "centerY": 0,
                                                    }
                  }
                  code={1}
                  playRounds={undefined}
                  playerId={0}
                  removeCard={[Function]}
                  src={undefined}
                  value={1}
/>,
              ],
              "className": "bottom-row",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "1",
                "nodeType": "class",
                "props": Object {
                  "alt": 1,
                  "animationFinished": [Function],
                  "center": Object {
                    "centerX": 0,
                    "centerY": 0,
                  },
                  "code": 1,
                  "playRounds": undefined,
                  "playerId": 0,
                  "removeCard": [Function],
                  "src": undefined,
                  "value": 1,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="row-container shrink"
>
            <p
                        className="player-info"
            >
                        Player 2
            </p>
            <p
                        className="player-info"
            >
                        Score: 0
            </p>
            <div
                        className="top-row"
            >
                        <Connect(Card)
                                    alt={3}
                                    animationFinished={[Function]}
                                    center={
                                                Object {
                                                            "centerX": 0,
                                                            "centerY": 0,
                                                          }
                                    }
                                    code={3}
                                    playRounds={undefined}
                                    playerId={2}
                                    removeCard={[Function]}
                                    src={undefined}
                                    value={3}
                        />
            </div>
</div>,
          <div
            className="middle-row"
>
            <div
                        className="row-container shrink"
            >
                        <p
                                    className="player-info"
                        >
                                    Player 1
                        </p>
                        <p
                                    className="player-info"
                        >
                                    Score: 0
                        </p>
                        <div
                                    className="player-left"
                        >
                                    <Connect(Card)
                                                alt={2}
                                                animationFinished={[Function]}
                                                center={
                                                            Object {
                                                                        "centerX": 0,
                                                                        "centerY": 0,
                                                                      }
                                                }
                                                code={2}
                                                playRounds={undefined}
                                                playerId={1}
                                                removeCard={[Function]}
                                                src={undefined}
                                                value={2}
                                    />
                        </div>
            </div>
            <div
                        className="player table"
            />
</div>,
          <div
            className="row-container"
>
            <p
                        className="player-info me"
            >
                        Me
            </p>
            <p
                        className="player-info"
            >
                        Score: 0
            </p>
            <div
                        className="bottom-row"
            >
                        <Connect(Card)
                                    alt={1}
                                    animationFinished={[Function]}
                                    center={
                                                Object {
                                                            "centerX": 0,
                                                            "centerY": 0,
                                                          }
                                    }
                                    code={1}
                                    playRounds={undefined}
                                    playerId={0}
                                    removeCard={[Function]}
                                    src={undefined}
                                    value={1}
                        />
            </div>
</div>,
        ],
        "className": "wrapper",
      },
      "ref": Object {
        "current": null,
      },
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="player-info"
>
                Player 2
</p>,
              <p
                className="player-info"
>
                Score: 0
</p>,
              <div
                className="top-row"
>
                <Connect(Card)
                                alt={3}
                                animationFinished={[Function]}
                                center={
                                                Object {
                                                                "centerX": 0,
                                                                "centerY": 0,
                                                              }
                                }
                                code={3}
                                playRounds={undefined}
                                playerId={2}
                                removeCard={[Function]}
                                src={undefined}
                                value={3}
                />
</div>,
            ],
            "className": "row-container shrink",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Player 2",
                "className": "player-info",
              },
              "ref": null,
              "rendered": "Player 2",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Score: 0",
                "className": "player-info",
              },
              "ref": null,
              "rendered": "Score: 0",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Connect(Card)
                    alt={3}
                    animationFinished={[Function]}
                    center={
                                        Object {
                                                            "centerX": 0,
                                                            "centerY": 0,
                                                          }
                    }
                    code={3}
                    playRounds={undefined}
                    playerId={2}
                    removeCard={[Function]}
                    src={undefined}
                    value={3}
/>,
                ],
                "className": "top-row",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "3",
                  "nodeType": "class",
                  "props": Object {
                    "alt": 3,
                    "animationFinished": [Function],
                    "center": Object {
                      "centerX": 0,
                      "centerY": 0,
                    },
                    "code": 3,
                    "playRounds": undefined,
                    "playerId": 2,
                    "removeCard": [Function],
                    "src": undefined,
                    "value": 3,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="row-container shrink"
>
                <p
                                className="player-info"
                >
                                Player 1
                </p>
                <p
                                className="player-info"
                >
                                Score: 0
                </p>
                <div
                                className="player-left"
                >
                                <Connect(Card)
                                                alt={2}
                                                animationFinished={[Function]}
                                                center={
                                                                Object {
                                                                                "centerX": 0,
                                                                                "centerY": 0,
                                                                              }
                                                }
                                                code={2}
                                                playRounds={undefined}
                                                playerId={1}
                                                removeCard={[Function]}
                                                src={undefined}
                                                value={2}
                                />
                </div>
</div>,
              <div
                className="player table"
/>,
              undefined,
            ],
            "className": "middle-row",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="player-info"
>
                    Player 1
</p>,
                  <p
                    className="player-info"
>
                    Score: 0
</p>,
                  <div
                    className="player-left"
>
                    <Connect(Card)
                                        alt={2}
                                        animationFinished={[Function]}
                                        center={
                                                            Object {
                                                                                "centerX": 0,
                                                                                "centerY": 0,
                                                                              }
                                        }
                                        code={2}
                                        playRounds={undefined}
                                        playerId={1}
                                        removeCard={[Function]}
                                        src={undefined}
                                        value={2}
                    />
</div>,
                ],
                "className": "row-container shrink",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Player 1",
                    "className": "player-info",
                  },
                  "ref": null,
                  "rendered": "Player 1",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Score: 0",
                    "className": "player-info",
                  },
                  "ref": null,
                  "rendered": "Score: 0",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <Connect(Card)
                        alt={2}
                        animationFinished={[Function]}
                        center={
                                                Object {
                                                                        "centerX": 0,
                                                                        "centerY": 0,
                                                                      }
                        }
                        code={2}
                        playRounds={undefined}
                        playerId={1}
                        removeCard={[Function]}
                        src={undefined}
                        value={2}
/>,
                    ],
                    "className": "player-left",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": "2",
                      "nodeType": "class",
                      "props": Object {
                        "alt": 2,
                        "animationFinished": [Function],
                        "center": Object {
                          "centerX": 0,
                          "centerY": 0,
                        },
                        "code": 2,
                        "playRounds": undefined,
                        "playerId": 1,
                        "removeCard": [Function],
                        "src": undefined,
                        "value": 2,
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "player table",
              },
              "ref": Object {
                "current": null,
              },
              "rendered": null,
              "type": "div",
            },
            undefined,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p
                className="player-info me"
>
                Me
</p>,
              <p
                className="player-info"
>
                Score: 0
</p>,
              <div
                className="bottom-row"
>
                <Connect(Card)
                                alt={1}
                                animationFinished={[Function]}
                                center={
                                                Object {
                                                                "centerX": 0,
                                                                "centerY": 0,
                                                              }
                                }
                                code={1}
                                playRounds={undefined}
                                playerId={0}
                                removeCard={[Function]}
                                src={undefined}
                                value={1}
                />
</div>,
            ],
            "className": "row-container",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Me",
                "className": "player-info me",
              },
              "ref": null,
              "rendered": "Me",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Score: 0",
                "className": "player-info",
              },
              "ref": null,
              "rendered": "Score: 0",
              "type": "p",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <Connect(Card)
                    alt={1}
                    animationFinished={[Function]}
                    center={
                                        Object {
                                                            "centerX": 0,
                                                            "centerY": 0,
                                                          }
                    }
                    code={1}
                    playRounds={undefined}
                    playerId={0}
                    removeCard={[Function]}
                    src={undefined}
                    value={1}
/>,
                ],
                "className": "bottom-row",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": "1",
                  "nodeType": "class",
                  "props": Object {
                    "alt": 1,
                    "animationFinished": [Function],
                    "center": Object {
                      "centerX": 0,
                      "centerY": 0,
                    },
                    "code": 1,
                    "playRounds": undefined,
                    "playerId": 0,
                    "removeCard": [Function],
                    "src": undefined,
                    "value": 1,
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
